--- a/alacritty.yml
+++ b/alacritty.yml
@@ -2,34 +2,36 @@ env:
   TERM: alacritty
 
 # Colors (GitHub Dark)
-colors:
-  bright:
-    black: '#4d4d4d'
-    blue: '#6ca4f8'
-    cyan: '#2b7489'
-    green: '#56d364'
-    magenta: '#db61a2'
-    red: '#f78166'
-    white: '#ffffff'
-    yellow: '#e3b341'
-  cursor:
-    cursor: '#c9d1d9'
-    text: '#ffffff'
-  normal:
-    black: '#000000'
-    blue: '#6ca4f8'
-    cyan: '#2b7489'
-    green: '#56d364'
-    magenta: '#db61a2'
-    red: '#f78166'
-    white: '#ffffff'
-    yellow: '#e3b341'
-  primary:
-    background: '#101216'
-    foreground: '#8b949e'
-  selection:
-    background: '#3b5070'
-    text: '#ffffff'
+# colors:
+#   bright:
+#     black: '#4d4d4d'
+#     blue: '#6ca4f8'
+#     cyan: '#2b7489'
+#     green: '#56d364'
+#     magenta: '#db61a2'
+#     red: '#f78166'
+#     white: '#ffffff'
+#     yellow: '#e3b341'
+#   cursor:
+#     cursor: '#c9d1d9'
+#     text: '#ffffff'
+#   normal:
+#     black: '#000000'
+#     blue: '#6ca4f8'
+#     cyan: '#2b7489'
+#     green: '#56d364'
+#     magenta: '#db61a2'
+#     red: '#f78166'
+#     white: '#ffffff'
+#     yellow: '#e3b341'
+#   primary:
+#     background: '#101216'
+#     foreground: '#8b949e'
+#   selection:
+#     background: '#3b5070'
+#     text: '#ffffff'
+import:
+ - ~/.config/alacritty/themes/rose-pine.yml 
 
 font:
   size: 15.0
