A bit of clean up and changing theme

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,37 +1,8 @@
+# https://arslan.io/2021/02/15/automatic-dark-mode-for-terminal-applications/
 env:
   TERM: alacritty
-
-# Colors (GitHub Dark)
-# colors:
-#   bright:
-#     black: '#4d4d4d'
-#     blue: '#6ca4f8'
-#     cyan: '#2b7489'
-#     green: '#56d364'
-#     magenta: '#db61a2'
-#     red: '#f78166'
-#     white: '#ffffff'
-#     yellow: '#e3b341'
-#   cursor:
-#     cursor: '#c9d1d9'
-#     text: '#ffffff'
-#   normal:
-#     black: '#000000'
-#     blue: '#6ca4f8'
-#     cyan: '#2b7489'
-#     green: '#56d364'
-#     magenta: '#db61a2'
-#     red: '#f78166'
-#     white: '#ffffff'
-#     yellow: '#e3b341'
-#   primary:
-#     background: '#101216'
-#     foreground: '#8b949e'
-#   selection:
-#     background: '#3b5070'
-#     text: '#ffffff'
 import:
- - ~/.config/alacritty/themes/rose-pine.yml 
+  - ~/.config/alacritty/themes/colors.yml
 
 font:
   size: 15.0
@@ -40,9 +11,10 @@ font:
   bold:
     style: Bold
 
-
 key_bindings:
-  - { key: F,  mods: Alt,           chars: "\x1bf"                       }
-  - { key: B,  mods: Alt,           chars: "\x1bb"                       }
+  - { key: F, mods: Alt, chars: "\x1bf" }
+  - { key: B, mods: Alt, chars: "\x1bb" }
   # https://github.com/jwilm/alacritty/issues/93#issuecomment-427592040
-  - { key: D,  mods: Alt,           chars: "\x1bd"                       }
+  - { key: D, mods: Alt, chars: "\x1bd" }
+
+live_config_reload: true
