--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -18,3 +18,12 @@ key_bindings:
   - { key: D, mods: Alt, chars: "\x1bd" }
 
 live_config_reload: true
+
+shell:
+  program: /opt/homebrew/bin/tmux
+  args:
+    - new-session
+    - -A
+    - -D
+    - -s
+    - main
