Adding tool versions

--- a/colors.yml
+++ b/colors.yml
@@ -158,4 +158,4 @@ schemes:
       - { index: 16, color: "#FAB387" }
       - { index: 17, color: "#F5E0DC" }
 
-colors: *catppuchin_mocha
+colors: *catppuchin_latte
