--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,10 +26,10 @@ set -g mouse on
 # Fix escape lag in vim
 set -s escape-time 0
 
-# set -g default-terminal "alacritty"
-# set -g terminal-overrides ",alacritty:Tc"
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides ',*256col*:Tc'
+set -g default-terminal "alacritty"
+set -g terminal-overrides ",alacritty:Tc"
+# set -g default-terminal 'screen-256color'
+# set -ga terminal-overrides ',*256col*:Tc'
 
 
 # NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
