--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,9 +27,11 @@ set -g mouse on
 set -s escape-time 0
 
 set -g default-terminal "alacritty"
-set -g terminal-overrides ",alacritty:Tc"
+set -ag terminal-overrides ",alacritty:Tc"
 # set -g default-terminal 'screen-256color'
 # set -ga terminal-overrides ',*256col*:Tc'
+# set -g default-terminal "xterm-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
 # NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
