Fix format on save and meta-q

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -12,5 +12,6 @@ key_bindings:
   - { key: B, mods: Alt, chars: "\x1bb" }
   # https://github.com/jwilm/alacritty/issues/93#issuecomment-427592040
   - { key: D, mods: Alt, chars: "\x1bd" }
+  - { key: Q, mods: Alt, chars: "\x1bq" }
 
 live_config_reload: true
