Updates to shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,9 +25,11 @@ set -g mouse on
 
 # Fix escape lag in vim
 set -s escape-time 0
-
 set -g default-terminal "alacritty"
 set -ag terminal-overrides ",alacritty:Tc"
+
+# For auto focus in nvim
+set-option -g focus-events on
 
 # NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
 # WARNING: hex colors can't contain capital letters
