--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/distinction-dev/alacritty-schema/main/alacritty/reference.json
 # https://arslan.io/2021/02/15/automatic-dark-mode-for-terminal-applications/
 import:
   - ~/.dotfiles/colors.yml
@@ -6,6 +7,13 @@ font:
   size: 15.0
   normal:
     family: DankMono Nerd Font
+
+window:
+  opacity: 1.0
+  dynamic_padding: true
+  dimensions:
+    columns: 175
+    lines: 55 
 
 key_bindings:
   - { key: F, mods: Alt, chars: "\x1bf" }
