Add lazy lock file to gitignore
This was impossible to keep in sync and messed up my workflow of
automating updates on the ~/.dotfiles folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 nvim/plugin/packer_compiled.lua
 Library/LaunchAgents/dev.pangalos.tcp-docker-connection.plist
+
+# Removing the nvim lock file as it is hard to keep in sync
+.config/nvim/lazy-lock.json
